# ComfyUI-Artfat-FaceConsistency

./: .gitignore  README.md  face_core.py  nodes.py  pyproject.toml
example_workflows/: face_consistency_batch.json  face_consistency_example.json  face_consistency_generate.json
